# BRT_RLE_UTEC

./: README.md
BRT_Arduino/: BraccioRVIS.ino  Bracciocommand.ino
BRT_Bringup/: CMakeLists.txt  Readme.txt  package.xml
BRT_Bringup/launch/: BRT.launch  BRT_GAZEBO_TEST.launch  BRT_GB.launch  BRT_control.launch  BRT_gaz_control.launch  BRT_model.launch  GAZEBO.launch  artag.launch  atrapa.launch  camera.launch  main.launch  my_world.launch  robot.launch  robot_gazebo.launch  track.launch  usb_cam_ar_track.launch
BRT_Bringup/publish/: publish.cpp
BRT_Bringup/src/: BraccioDEV.py  detect_AR  gradiente  inversa  keyboard_gazebo  moverobjeto  send_atrapar  send_centro  send_joints  send_joints (1)  send_noventa  send_tocar  test_diffkine.py  test_fkine  test_gazebo  test_ikine
BRT_Description/: CMakeLists.txt  package.xml
BRT_Description/config/: BRT_control (2).yaml  BRT_control.yaml  BRT_mov.yaml  gripper.yaml  joint6_position_controller.yaml  robot-config.rviz
BRT_Description/meshes/: braccio_base.stl  braccio_elbow.stl  braccio_left_gripper.stl  braccio_right_gripper.stl  braccio_shoulder.stl  braccio_wrist_pitch.stl  braccio_wrist_roll.stl
BRT_Description/urdf/: BRT.urdf  BRT_GB.launch  BRT_Gazebo.urdf  BRT_Gazebo_copy.urdf  BRT_copyGB.urdf  BRT_model.urdf  robot_BRT.urdf
BRT_Description/world/: BRT_world.world  Objetos_world.world
marker0/: model.sdf
marker1/: model.config  model.sdf
marker1/meshes/: Marker0.dae
